[package]
name = "money_manager"
description = "WASM SQLite GnuCash Money Management System"
version = "0.9.0"
authors = ["Vince <vince@vinceworks.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
serde_json = "1.0.143"
serde_repr = "0.1.19"
regex = "1.11.2"
unicode-segmentation = "1.12.0"
format_num = "0.1.0"
base64 = "0.22.1"
rand = "0.9.2"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
#Required, because the indirect reference needs to function in a JavaScript environment
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[dependencies.chrono]
version = "0.4.38"
features = ["serde", "wasmbind"]

[dependencies.serde_derive]
version = "1.0.197"


[dependencies.uuid]
version = "1.18.0"
features = [
  "serde", 
  "v4",
  "js",
]

[dependencies.wasm-bindgen]
version = "0.2.100"
features = [
  "serde-serialize",
  "msrv",
]

[dependencies.web-sys]
version = "0.3.72"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CssStyleSheet",
  "StyleSheet",
  "HtmlInputElement",
  "FileList",
  "HtmlHeadElement",
  "HtmlDocument",
  "HtmlButtonElement",
  "FileReader",
  "File",
  "Blob",
  "ProgressEvent",
  "ErrorEvent",
  "CssStyleDeclaration",
  "DomStringMap",
  "HtmlAnchorElement",
  "DomTokenList",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlOptionsCollection",
  "HtmlDataListElement",
  "HtmlOptionElement",
  "KeyboardEvent",
  ]

[dependencies.js-sys]
version = "0.3.68"
features = [
  
]

[lib]
crate-type =["cdylib"]

