[package]
name = "money_manager"
description = "WASM SQLite GnuCash Money Management System"
version = "0.10.1"
authors = ["Vince <vince@vinceworks.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
serde_json = "1.0.143"
serde_repr = "0.1.19"
regex = "1.11.3"
unicode-segmentation = "1.12.0"
format_num = "0.1.0"
base64 = "0.22.1"
rand = "0.9.2"
serde = { version = "1.0.227", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
#Required, because the indirect reference needs to function in a JavaScript environment
getrandom = { version = "0.3.3", features = ["wasm_js"] }
csv = "1.3.1"

[dependencies.chrono]
version = "0.4.42"
features = ["serde", "wasmbind"]

[dependencies.serde_derive]
version = "1.0.227"


[dependencies.uuid]
version = "1.18.1"
features = [
  "serde", 
  "v4",
  "js",
]

[dependencies.wasm-bindgen]
version = "0.2.100"
features = [
  "serde-serialize",
  "msrv",
]

[dependencies.web-sys]
version = "0.3.78"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CssStyleSheet",
  "StyleSheet",
  "HtmlInputElement",
  "FileList",
  "HtmlHeadElement",
  "HtmlDocument",
  "HtmlButtonElement",
  "FileReader",
  "File",
  "Blob",
  "ProgressEvent",
  "ErrorEvent",
  "CssStyleDeclaration",
  "DomStringMap",
  "HtmlAnchorElement",
  "DomTokenList",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlOptionsCollection",
  "HtmlDataListElement",
  "HtmlOptionElement",
  "KeyboardEvent",
  "Event",
  "ObserverCallback",
  ]

[dependencies.js-sys]
version = "0.3.81"
features = [
  
]

[lib]
crate-type =["cdylib"]

